добавил страницу продавцов, переход к ней из главной и обратно

--- a/WebProject/VIews/Home/Index.cshtml
+++ b/WebProject/VIews/Home/Index.cshtml
@@ -8,6 +8,6 @@
 	<body>
 		<h3>Заголовек</h3>
 		<p>Первое представление!</p>
-
+		<a href="/home/employees">Список сотрудников</a>
 	</body>
 </html>
